Rename disposition to disposition_raw_text
